--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,14 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 10vmin;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
+  padding: 10px;
+  margin-bottom: 10px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
