Branding and some extra styling 💅

--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,11 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
   height: 10vmin;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #588F27;
   display: flex;
   padding: 10px;
   margin-bottom: 10px;
@@ -20,14 +19,9 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #588F27;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-link-light {
+  color: #ffffff;
 }
